tests/ui/failing/issue-45124.rs.stderr
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.00s
     Running `target/debug/stable_mir_json -Zno-codegen /home/zncv/Applications/mir-semantics-compiletest/ui/try-block/issue-45124.rs`
error: expected identifier, found keyword `let`
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/try-block/issue-45124.rs:11:13
   |
10 |         let _: Result<(), ()> = try {
   |                                 --- while parsing this struct
11 |             let () = Err(())?;
   |             ^^^ expected identifier, found keyword
   |
help: escape `let` to use it as an identifier
   |
11 |             r#let () = Err(())?;
   |             ++

error[E0574]: expected struct, variant or union type, found macro `try`
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/try-block/issue-45124.rs:10:33
   |
10 |         let _: Result<(), ()> = try {
   |                                 ^^^ not a struct, variant or union type
   |
   = note: if you want the `try` keyword, you need Rust 2018 or later
help: use `!` to invoke the macro
   |
10 |         let _: Result<(), ()> = try! {
   |                                    +

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0574`.
